update assessments registry api
